  of history of events that is stored in _history. This can be used to plot graphs of events
  in webui, for example.
- Add plotting of status change history to WebUi info panel + tag view
- Add .status_filter function attribute to all sensors, that can be used to manipulate status
  after set_status().

0.10.19 (2017-08-04)
--------------------

- First release with support for special support for AutomateFirmata features for Arduino module,
  see <https://github.com/tuomas2/AutomateFirmata>.
- VirtualWire support in Arduino. This allows wireless communication to remote Arduinos using
  very cheap RF circuits. See documentation!
- Add support to builtin pull up resistors in Arduino digital input pins.
- Arduino service instance now serves only 1 device. Use multiple services if you want to
  use many devices. For usage see examples/arduino2.py. Only ArduinoService attributes
  were changed, see the documentation.


0.10.18 (2017-07-19)
--------------------

- Logging improvements.


0.10.17 (2017-07-19)
--------------------

- Pass action information to callables in kwargs and use information in PushOver.


0.10.16 (2017-07-16)
--------------------

- Improved logging configuration (does not ever define root logger)


0.10.15 (2017-07-15)
--------------------

- Fix broken python 2 support


0.10.14 (2017-07-15)
--------------------

- Add support for Sentry (http://sentry.io) via raven library


0.10.13 (2017-07-13)
--------------------

- Improve PushOver error handling and add some additional attributes


0.10.12 (2017-07-13)
--------------------

- Fix wrong is_mocked status for ArduinoService


0.10.11 (2017-07-13)
--------------------

- Always use latest pickle format
- Show alert box about mocked services (if any) in web ui (any view)
- Add services to threads view and rename view to system and threads
- Move threads, uml, and console to "View" submenu.
- Add function to cancel timers (and other threads that implement cancel)